style.css
html {
  box-sizing: border-box;
  font-size: 10px;
  background: #ffc600;
  height: 100vh;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  padding: 0;
  margin: 0;
  font-family: "Amatic SC", cursive;
}

h1 {
  text-align: center;
  font-size: 10rem;
  line-height: 1;
  margin-bottom: 0;
}

.score {
  background: rgba(255, 255, 255, 0.2);
  padding: 0 3rem;
  line-height: 1;
  border-radius: 1rem;
}

.game {
  width: 600px;
  height: 400px;
  display: flex;
  flex-wrap: wrap;
  margin: 0 auto;
  border: 2px dashed teal;
  padding: 10px;
  border-radius: 20px;
  cursor: none;
}
.mouse {
  width: 80px;
  height: 80px;
  position: absolute;
  left: var(--mouse-x);
  top: var(--mouse-y);
  background-image: url("http://www.clker.com/cliparts/c/b/b/e/11954217511527806368hammer_david_benjamin_01.svg.thumb.png");
  background-size: cover;
  background-repeat: no-repeat;
  z-index: 3;
  transition: 0.1s ease;
  transform: rotate3d(0, 1, 0, -180deg);
}
.clicked {
  transform: rotate3d(0, 1, 0, -180deg) rotate(45deg);
}
.hole {
  flex: 1 0 33.33%;
  overflow: hidden;
  position: relative;
}

.hole:after {
  display: block;
  background: url(dirt.svg) bottom center no-repeat;
  background-size: contain;
  content: "";
  width: 100%;
  height: 70px;
  position: absolute;
  z-index: 2;
  bottom: -30px;
}

.mole {
  background: url("mole.svg") bottom center no-repeat;
  background-size: 60%;
  position: absolute;
  top: 100%;
  width: 100%;
  height: 100%;
  transition: all 0.4s;
}

.hole.up .mole {
  top: 0;
}

.buttons {
  display: flex;
  justify-content: center;
  margin: 20px 0;
}
.name-form {
  display: flex;
  align-items: center;
}
.name-form label {
  font-size: 20px;
  margin-right: 5px;
}
.name-form #name {
  height: 25px;
}
.start {
  margin-left: 20px;
  padding: 0 10px;
  color: floralwhite;
  background-color: darkmagenta;
  border: none;
  transition: 0.2s ease;
}
.start:hover {
  cursor: pointer;
  background-color: crimson;
}

